--- a/src/static/manifest.yml
+++ b/src/static/manifest.yml
@@ -1,7 +1,8 @@
 applications:
-- name: hs-mw-profile
-  host: hs-mw-profile
-  memory: 64M
+- memory: 64M
   instances: 2
-  domain: mybluemix.net
   buildpack: staticfile_buildpack
+  # defines appname code-by-color #FFFFFF
+  name: hs-mw-profile
+  host: hs-mw-profile
+  domain: mybluemix.net
